--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -2,13 +2,15 @@
 @use "../abstracts/colors" as *;
 
 .wrap {
+  padding: 0 0.7rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 3fr 2fr;
+  grid-template-rows: 15vh 40vh 1fr;
   gap: 1rem;
-  height: 100vh;
+  min-height: 100vh;
   color: $color_font;
   background-color: $color_background;
+  overflow: hidden;
 }
 
 main {
@@ -19,9 +21,32 @@ main {
 }
 
 .watch {
-  p {
+  text-align: center;
+  .numbers {
     font-size: 3rem;
-    text-align: center;
     color: $color_watch;
   }
+  .warning {
+    opacity: 0;
+    font-size: 1rem;
+    color: $color_warning;
+  }
+  .visible {
+    opacity: 1;
+  }
+}
+
+.buttons {
+  @include gridBTN;
+  grid-template-columns: 1fr 1fr 1fr;
+  min-width: max-content;
+}
+.scores {
+  @include gridBTN;
+  grid-template-rows: 5vh 1fr;
+  font-size: 0.8rem;
+  text-align: center;
+}
+.center {
+  padding: 0;
 }
