delete 2 files _buttons.scss _button.scss remove two unnecessary style files, one created in the wrong directory and one a double of already existing file

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -9,5 +9,8 @@ header {
     font-size: 2rem;
     font-weight: $bold;
     text-transform: $uppercase;
+    @include mediaQ(small) {
+      font-size: 4em;
+    }
   }
 }
