--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,5 @@
 @forward "./base/reset";
 @forward "./abstracts/mixins";
 @forward "./abstracts/colors";
-@forward "./layout/button";
+@forward "./abstracts/variables";
+@forward "./components/button";
