--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -1,3 +1,6 @@
+@use "sass:map";
+@use "../abstracts/variables" as *;
+
 @mixin centerFlex {
   display: flex;
   flex-direction: row;
@@ -8,4 +11,11 @@
 @mixin gridBTN {
   display: grid;
   align-items: start;
+}
+
+@mixin mediaQ($size) {
+  $width: map.get($breakpoints, $size);
+  @media (min-width: $width) {
+    @content;
+  }
 }
