change _header.scss and _layout.scss for bigger screens

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -12,5 +12,8 @@ header {
     @include mediaQ(small) {
       font-size: 4em;
     }
+    @include mediaQ(large) {
+      font-size: 5.5em;
+    }
   }
 }
