--- a/src/sass/layout/_layout.scss
+++ b/src/sass/layout/_layout.scss
@@ -31,6 +31,9 @@ main {
     @include mediaQ(small) {
       font-size: 6.5em;
     }
+    @include mediaQ(large) {
+      font-size: 9em;
+    }
   }
   .warning {
     opacity: 0;
@@ -51,9 +54,15 @@ main {
   flex-direction: column;
   margin: 1em;
   padding: 0;
-  font-size: 1em;
+  font-size: 1.2em;
   @include mediaQ(small) {
     font-size: 2em;
+  }
+  @include mediaQ(medium) {
+    font-size: 2.5em;
+  }
+  @include mediaQ(large) {
+    font-size: 3.5em;
   }
 }
 .buttons {
